# Regression_ML_EndtoEnd

./: .gitignore  CLAUDE.md  Dockerfile.streamlit  README.md  app.py  main.py  pyproject.toml  streamlit-task-def.json
.github/workflows/: ci.yml
mlruns/0/: meta.yaml
mlruns/517683228267271597/: meta.yaml
mlruns/517683228267271597/3d6b25921eb147e590cb4719472aa5e1/: meta.yaml
mlruns/517683228267271597/47a3c54c04b24121ba3efc57700361c7/: meta.yaml
mlruns/517683228267271597/4bb781bc40a3476ea7371de6c006caed/: meta.yaml
mlruns/517683228267271597/56e7d0486f6a4897b0e8e4fca6df6ed6/: meta.yaml
mlruns/517683228267271597/644d187629904648936c093d4dfcf6cb/: meta.yaml
mlruns/517683228267271597/791c205973784e7c9ab1cf282ec47e69/: meta.yaml
mlruns/517683228267271597/79a3ee1b69564913a988dedc40de813b/: meta.yaml
mlruns/517683228267271597/7ce95ec492fd412d85953bd535221f79/: meta.yaml
mlruns/517683228267271597/86156a323b124ab3a82140f53d602c13/: meta.yaml
mlruns/517683228267271597/91458878c75041089d0f192b34b415f5/: meta.yaml
models/: target_encoder.pkl
notebooks/: 00_data_split.ipynb  01_EDA.ipynb  01_EDA_cleaning.ipynb  02_feature_eng_encoding.ipynb  03_baseline.ipynb  04_linear_regression_regularization.ipynb  05_XGBoost.ipynb  06_hyperparameter_tuning_MFLow.ipynb  07_S3_push_datasets_AWS.ipynb
src/api/: main.py
src/feature_pipeline/: feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: inference.py  smoke_test_.ipynb
tests/: data_quality.py  smoke_test_.ipynb  test_features.py  test_inference.py  test_training.py
(+169 files in other folders)
